--- a/css/meflat-blue.css
+++ b/css/meflat-blue.css
@@ -384,7 +384,7 @@ a:focus,
 .jumbotron.bg-image {
     position: relative;
     /* background:url(/Users/dylanwidjaja/Desktop/lfz/portfolio/background.JPG) 50% 50% no-repeat; */
-    background:url(/Users/dylanwidjaja/Desktop/lfz/portfolio/assets/background_image.jpg) 30% 30% no-repeat;
+    background:url(../assets//background_image.jpg) 30% 30% no-repeat;
     background-size: cover;
 }
 
