added content regarding the featured project also added technologies icons and styling for smaller screens

--- a/css/meflat-blue.css
+++ b/css/meflat-blue.css
@@ -562,6 +562,11 @@ a:focus,
     -webkit-transition:-webkit-transform .4s ease-out;
     transition:transform .4s ease-out;
 }
+
+.technologies {
+    height: 100px;
+    margin-bottom: 10px;
+}
 /*----------------------
 -----Featured Project----
 ------------------------*/  
@@ -1404,6 +1409,11 @@ a:focus,
     
     .section-header h1{
         font-size:38px;
+    }
+
+    .technologies-container {
+        width:49%;
+        display:inline-block
     }
 }
 
