added a button that will automatically download resume upon clicking text disappears when clicking, but reappears when clicking anywhere else will need to fix

--- a/css/meflat-blue.css
+++ b/css/meflat-blue.css
@@ -1359,6 +1359,13 @@ a:focus,
 	transform:translateY(0px);
 }
 
+.resume , .resume:hover {
+    color:white;
+    text-decoration: none;
+}
+
+
+
 /*----------------------
 -----Media Queries------
 ------------------------*/    
